--- a/style.css
+++ b/style.css
@@ -3,4 +3,51 @@
     height: 100vh;
     bottom: -180px;
     right: -180px;
+    z-index: -1;
+}
+
+.header {
+    padding: 12px 40px;
+    background-color: rgba(0, 0, 0, .05);
+    border-bottom: 1px solid rgba(0, 0, 0, .1);
+    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, .04), 0 8px 12px -2px rgba(0, 0, 0, .06), 0 4px 6px 0 rgba(0, 0, 0, .04);
+}
+
+h1 {
+    color: rgb(36, 46, 48) !important;
+}
+
+input {
+    border: none;
+    background-color: white;
+    padding: 8px;
+    width: 280px;
+}
+
+.search {
+    display: flex;
+    max-height: 32px;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.search-btn {
+    width: 32px;
+    border: none;
+    display: contents;
+}
+
+.search-icon {
+    height: 32px;
+    min-width: 32px;
+    background-color: white;
+    padding-right: 4px;
+}
+
+input::placeholder {
+    color: rgba(0, 0, 0, .3);
+}
+
+main {
+    margi
 }
