--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, .04), 0 8px 12px -2px rgba(0, 0, 0, .06), 0 4px 6px 0 rgba(0, 0, 0, .04);
 }
 
-h1 {
-    color: rgb(36, 46, 48) !important;
+.logo {
+    height: 120px;
 }
 
 input {
@@ -22,6 +22,7 @@ input {
     background-color: white;
     padding: 8px;
     width: 280px;
+    outline: none;
 }
 
 .search {
@@ -49,5 +50,58 @@ input::placeholder {
 }
 
 main {
-    margi
+    margin: 16px 0;
+}
+
+.poke-card {
+    min-width: 320px;
+    max-width: 320px;
+    background-color: #68d88c !important;
+    padding: 16px;
+    border-radius: 16px;
+    border: none !important;
+    background-image: url(./img/pokeball-background.svg);
+    background-position: bottom -92px right -64px;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+.types {
+    flex-direction: column;
+    gap: 8px;
+}
+
+.types>div {
+    padding: 4px 16px;
+    background-color: rgba(255, 255, 255, .2);
+    text-align: center;
+    border-radius: 16px;
+}
+
+.card-text span {
+    margin-top: auto;
+    color: rgba(255, 255, 255, .75);
+    font-size: 18px;
+}
+
+.card-content {
+    display: flex;
+    height: 260px;
+    position: relative;
+    color: white;
+}
+
+.card-text {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 8px;
+}
+
+.poke-img {
+    max-height: 180px;
+    max-width: 180px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
 }
