added a few functions, minor style changes and other minor changes

--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ main {
 .poke-card {
     background-color: #68d88c !important;
     padding: 16px;
+    max-width: 320px;
     border-radius: 16px;
     border: none !important;
     background-image: url(./img/pokeball-background.svg);
