--- a/style.css
+++ b/style.css
@@ -148,3 +148,36 @@ input::placeholder {
 .to-top-btn-wrapper>img {
     width: 100%;
 }
+
+.detail-overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, .5);
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.detailed-card {
+    height: 80vh;
+    width: calc(80vh/1.5);
+    z-index: 11;
+    border-radius: 20px;
+    background-color: white;
+}
+
+.detail-card-top {
+    background-color: rgb(104, 216, 140);
+    height: 50%;
+    border-radius: 20px 20px 0 0;
+}
+
+.detail-card-bottom {
+    margin-top: -20px;
+    border-radius: 20px 20px 0 0;
+    height: 100px;
+}
