--- a/style.css
+++ b/style.css
@@ -166,18 +166,54 @@ input::placeholder {
     height: 80vh;
     width: calc(80vh/1.5);
     z-index: 11;
-    border-radius: 20px;
+    border-radius: 40px;
     background-color: white;
 }
 
 .detail-card-top {
-    background-color: rgb(104, 216, 140);
+    /* background-color: rgb(104, 216, 140); */
     height: 50%;
-    border-radius: 20px 20px 0 0;
+    border-radius: 32px 32px 0 0;
+}
+
+.detail-card-top>div {
+    padding: 16px 24px 0 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.detail-card-top>div>img {
+    width: 32px;
+    padding: 2px;
+    border-radius: 0.375rem;
+}
+
+.like-icon:hover {
+    padding: 2px;
+    background-color: rgba(0, 0, 0, .1);
+}
+
+.close-btn {
+    padding: 8px !important;
+}
+
+.close-btn:hover {
+    padding: 8px;
+    background-color: rgba(0, 0, 0, .1);
+}
+
+.close-btn:focus {
+    box-shadow: none !important;
 }
 
 .detail-card-bottom {
-    margin-top: -20px;
-    border-radius: 20px 20px 0 0;
-    height: 100px;
+    margin-top: -40px;
+    border-radius: 32px 32px 0 0;
+    height: 50%;
+    background-color: white;
+}
+
+.detailed-card {
+    color: white;
 }
