--- a/style.css
+++ b/style.css
@@ -85,6 +85,11 @@ input::placeholder {
     -moz-box-shadow: 2px 35px 32px -8px rgba(0, 0, 0, 0.75);
 }
 
+.card-wrapper:hover .poke-img {
+    opacity: 0;
+    transition: all 0.25s;
+}
+
 .card-wrapper {
     transition: all .2s;
     border-radius: 16px;
@@ -124,13 +129,12 @@ input::placeholder {
     width: 160px;
     max-height: 140px;
     opacity: 0;
-    transition: all 0.5s;
+    transition: all 0.25s;
     transform: translate3d(60px, 0, 10px);
     left: 64px;
     right: 64px;
     bottom: 20px;
     position: absolute;
-    /* object-fit: cover; */
     z-index: -1;
 }
 
@@ -140,8 +144,6 @@ input::placeholder {
     max-width: 90%;
     width: 90%;
     max-height: 80%;
-    /* left: 20px;
-    right: 20px; */
     z-index: 1;
     cursor: pointer;
 }
@@ -152,6 +154,7 @@ input::placeholder {
 
 .types {
     flex-direction: column;
+    align-items: start;
     gap: 8px;
 }
 
@@ -340,4 +343,9 @@ input::placeholder {
 
 .detail-img-wrapper {
     height: 10px;
+}
+
+.card-btn {
+    cursor: pointer;
+    height: 60px;
 }
